--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 //Add this environmental variables to your cloud hosting site e.g heroku
 
-DEV=254114018035 //you can add more separated with commas
+254792380807 //you can add more separated with commas
 PREFIX=! // leave blank if you don't want to use prefix
 AI=ADD OPENAI API KEY
 GROUP_ONLY_MSG=group chats only!
@@ -9,9 +9,9 @@ BOT_ADMIN_MSG=Check and ensure bot is admin.
 NOT_OWNER_MSG=Owner Only
 STICKER_PACKNAME=fortunatus
 STICKER_AUTHOR=dreaded
-WELCOME=TRUE
+WELCOME=FALSE
 AUTOVIEW_STATUS=TRUE
 BAD_WORD=fuck //you can add more
-BAD_WORD_KICK=TRUE
+BAD_WORD_KICK=FALSE
 AUTOREAD_AND_TYPE=TRUE
 
